fix overflow in quick

--- a/src/client/pages/inventory/quick/quick.scss
+++ b/src/client/pages/inventory/quick/quick.scss
@@ -4,7 +4,7 @@
 
     [scroll-row] {
       margin-top: 20px;
-      overflow: scroll;
+      overflow: auto;
     }
   }
 }
